# website

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
application/: forms.py  models.py  urls.py  views.py
application/migrations/: 0001_initial.py  0002_userinfo_password.py  0003_delete_userinfo.py  0004_initial.py  0005_remove_userinfo_tryingout.py  0006_userinfo_tryingagain.py  0007_remove_userinfo_tryingagain.py  0008_remove_userinfo_age_remove_userinfo_email_and_more.py  0009_userinfo_birth_date_userinfo_email_and_more.py  0010_alter_userinfo_birth_date_and_more.py  0011_rename_birth_date_userinfo_birth_datee_and_more.py  0012_remove_userinfo_birth_datee_and_more.py  0012_rename_birth_date_userinfo_birthdate_and_more.py  0013_alter_userinfo_birth_date_and_more.py  0013_userinfo_major_type_alter_userinfo_major.py  0014_alter_userinfo_birth_date_and_more.py  0014_alter_userinfo_major_type.py  0015_alter_userinfo_birth_date_and_more.py  0015_alter_userinfo_major.py  0016_alter_userinfo_birth_date_and_more.py  0017_alter_userinfo_birth_date_and_more.py  0018_alter_userinfo_birth_date_and_more.py  0019_rename_birth_date_userinfo_birthdate_and_more.py
application/templates/: success.html  user_form.html
mysite/: settings.py  urls.py
