[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.2",
    "psycopg>=3.2.3",
    "psycopg-binary>=3.2.3",
    "django-environ>=0.11.2",
    "dj-database-url>=2.3.0",
    "gunicorn>=23.0.0",
]
